# roar_gokart_msgs

./: CMakeLists.txt  package.xml
msg/: Actuation.msg  EgoVehicleControl.msg  VehicleStatus.msg
